Kurse und Kommentare zum Datenmodell hinzugefügt

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,8 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <title>Inklusive Lernplattform</title>
+    <base href="/" />
+    <title>Lernplattform</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
